tests/snapshots/render__awake-held-80x24.snap
---
source: tests/render.rs
expression: t.backend()
---
"┌ gensokyo ─────────────┐┌ 1 Reimu · ~/dev/gensokyo ───────────────────────────┐"
"│1 ○ Reimu              ││line 00                                              │"
"│2 ○ Marisa             ││line 01     ~                                        │"
"│3 · Cirno              ││line 02     ~~                                       │"
"│                       ││line 03     ~~~                                      │"
"│                       ││line 04     ~~~~                                     │"
"│                       ││line 05     ~~~~~                                    │"
"│                       ││line 06     ~~~~~~                                   │"
"│                       ││line 07     ~~~~~~~                                  │"
"│                       ││line 08     ~~~~~~~~                                 │"
"│                       ││line 09     ~~~~~~~~~                                │"
"│                       ││line 10     ~~~~~~~~~~                               │"
"│                       ││line 11     ~~~~~~~~~~~                              │"
"│                       ││line 12     ~~~~~~~~~~~~                             │"
"│                       ││line 13     ~~~~~~~~~~~~~                            │"
"│                       ││line 14     ~~~~~~~~~~~~~~                           │"
"│[summon n] [cast c]    ││line 15     ~~~~~~~~~~~~~~~                          │"
"│[banish b] [recall r]  ││line 16     ~~~~~~~~~~~~~~~~                         │"
"│[timetable t] [quit q] ││line 17     ~~~~~~~~~~~~~~~~~                        │"
"│[?]                    ││line 18     ~~~~~~~~~~~~~~~~~~                       │"
"│[awake: on, holding w] ││line 19     ~~~~~~~~~~~~~~~~~~~                      │"
"│clicks are off: ^] m   ││line 20                                              │"
"│[mouse: native m]      ││line 21     ~                                        │"
"└──── ^] then a key ────┘└─────────────────────────────────────────────────────┘"
