tests/snapshots/render__aware-120x40.snap
---
source: tests/render.rs
expression: t.backend()
---
"┌ gensokyo ─────────────┐┌ 1 Reimu · ~/dev/gensokyo ⎇ main · Haiku 4.5→⚖ Opus · high · accept-edits · ⚡91% · $0.42 ───┐" Hidden by multi-width symbols: [(103, " ")]
"│1 ● Reimu      Hai  12%││line 00                                                                                      │"
"│2 ✦ Marisa     Opu   8%││line 01     ~                                                                                │"
"│3 · Cirno              ││line 02     ~~                                                                               │"
"│4 ✧ Sakuya             ││line 03     ~~~                                                                              │"
"│                       ││line 04     ~~~~                                                                             │"
"│                       ││line 05     ~~~~~                                                                            │"
"│                       ││line 06     ~~~~~~                                                                           │"
"│                       ││line 07     ~~~~~~~                                                                          │"
"│                       ││line 08     ~~~~~~~~                                                                         │"
"│                       ││line 09     ~~~~~~~~~                                                                        │"
"│                       ││line 10     ~~~~~~~~~~                                                                       │"
"│                       ││line 11     ~~~~~~~~~~~                                                                      │"
"│                       ││line 12     ~~~~~~~~~~~~                                                                     │"
"│                       ││line 13     ~~~~~~~~~~~~~                                                                    │"
"│                       ││line 14     ~~~~~~~~~~~~~~                                                                   │"
"│                       ││line 15     ~~~~~~~~~~~~~~~                                                                  │"
"│                       ││line 16     ~~~~~~~~~~~~~~~~                                                                 │"
"│                       ││line 17     ~~~~~~~~~~~~~~~~~                                                                │"
"│                       ││line 18     ~~~~~~~~~~~~~~~~~~                                                               │"
"│                       ││line 19     ~~~~~~~~~~~~~~~~~~~                                                              │"
"│                       ││line 20                                                                                      │"
"│                       ││line 21     ~                                                                                │"
"│                       ││line 22     ~~                                                                               │"
"│                       ││line 23     ~~~                                                                              │"
"│                       ││line 24     ~~~~                                                                             │"
"│                       ││line 25     ~~~~~                                                                            │"
"│                       ││line 26     ~~~~~~                                                                           │"
"│                       ││line 27     ~~~~~~~                                                                          │"
"│                       ││line 28     ~~~~~~~~                                                                         │"
"│                       ││line 29     ~~~~~~~~~                                                                        │"
"│                       ││line 30     ~~~~~~~~~~                                                                       │"
"│                       ││line 31     ~~~~~~~~~~~                                                                      │"
"│5h ▓░░░░ 37% ↻2h11m    ││line 32     ~~~~~~~~~~~~                                                                     │"
"│wk ▓▓▓░░ 62% ↻3d4h     ││line 33     ~~~~~~~~~~~~~                                                                    │"
"│[summon n] [banish b]  ││line 34     ~~~~~~~~~~~~~~                                                                   │"
"│[recall r] [cast c]    ││line 35     ~~~~~~~~~~~~~~~                                                                  │"
"│[quit q] [?]           ││line 36     ~~~~~~~~~~~~~~~~                                                                 │"
"│[mouse: shrine m]      ││line 37     ~~~~~~~~~~~~~~~~~                                                                │"
"└───────────────────────┘└─────────────────────────────────────────────────────────────────────────────────────────────┘"
