tests/snapshots/render__aware-80x24.snap
---
source: tests/render.rs
expression: t.backend()
---
"┌ gensokyo ─────────────┐┌ 1 Reimu · ~/dev/gensokyo ⎇ main · Haiku 4.5→⚖ Opus ·┐"
"│1 ● Reimu      Hai  12%││line 00                                              │"
"│2 ✦ Marisa     Opu   8%││line 01     ~                                        │"
"│3 · Cirno              ││line 02     ~~                                       │"
"│4 ✧ Sakuya             ││line 03     ~~~                                      │"
"│                       ││line 04     ~~~~                                     │"
"│                       ││line 05     ~~~~~                                    │"
"│                       ││line 06     ~~~~~~                                   │"
"│                       ││line 07     ~~~~~~~                                  │"
"│                       ││line 08     ~~~~~~~~                                 │"
"│                       ││line 09     ~~~~~~~~~                                │"
"│                       ││line 10     ~~~~~~~~~~                               │"
"│                       ││line 11     ~~~~~~~~~~~                              │"
"│                       ││line 12     ~~~~~~~~~~~~                             │"
"│                       ││line 13     ~~~~~~~~~~~~~                            │"
"│                       ││line 14     ~~~~~~~~~~~~~~                           │"
"│                       ││line 15     ~~~~~~~~~~~~~~~                          │"
"│5h ▓░░░░ 37% ↻2h11m    ││line 16     ~~~~~~~~~~~~~~~~                         │"
"│wk ▓▓▓░░ 62% ↻3d4h     ││line 17     ~~~~~~~~~~~~~~~~~                        │"
"│[summon n] [banish b]  ││line 18     ~~~~~~~~~~~~~~~~~~                       │"
"│[recall r] [cast c]    ││line 19     ~~~~~~~~~~~~~~~~~~~                      │"
"│[quit q] [?]           ││line 20                                              │"
"│[mouse: shrine m]      ││line 21     ~                                        │"
"└───────────────────────┘└─────────────────────────────────────────────────────┘"
